--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage":"fleuread.onrender.com",
   "main":"server.js",
   "dependencies":{
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.53.0"
   },
   "bugs":{
     "url":"https://github.com/Fleurea-Dispatcher-Developpment-Company/project/issues",
