--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main":"server.js",
   "dependencies":{
     "express": "^4.18.2",
-    "@supabase/supabase-js": "^2.53.0"
+    "@supabase/supabase-js": "^2.53.0",
+    "cors":"^2.8.5"
   },
   "bugs":{
     "url":"https://github.com/Fleurea-Dispatcher-Developpment-Company/project/issues",
