--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies":{
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.53.0",
-    "cors":"^2.8.5"
+    "cors":"^2.8.5",
+    "staticmaps":"^1.6.1"
   },
   "bugs":{
     "url":"https://github.com/Fleurea-Dispatcher-Developpment-Company/project/issues",
